crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__fall_off_end_of_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/fall_off_end_of_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] []
      (block
         (expr (+ 42.0 27.0))))
   (print (call +2 (global f @1))))

----- stderr -----
