crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__for_loop_opens_new_scope_for_initialiser.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/for_loop_opens_new_scope_for_initialiser.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var i @1 42.0)
      (for
         (var i @2 0.0)
         (< (local i @2) 2.0)
         (= (local i @2) (+ (local i @2) 1.0))
         (block
            (print (local i @2))))
      (print (local i @1))))

----- stderr -----
