crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__function_call_arity_mismatch_too_few.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/function_call_arity_mismatch_too_few.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun function_name @1 [param]
      (block))
   (expr (call +2 (local function_name @1))))

----- stderr -----
