crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__function_call_arity_mismatch_too_many.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/function_call_arity_mismatch_too_many.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun function_name (global @1) [(local param @0)] []
      (block))
   (expr (call +2 (global function_name @1) 42.0 27.0)))

----- stderr -----
