crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-crabbing-interpreters__tests__cases__local_variables.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/local_variables.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f @1 []
      (block
         (var a @0 42.0)
         (var b @1 27.0)
         (print (global f @1))
         (print (local a @0))
         (print (local b @1))))
   (expr (call +2 (local f @1))))

----- stderr -----
